--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/glenndoren/banecasinobot#readme",
   "dependencies": {
     "botbuilder": "^3.2.3",
+    "https": "^1.0.0",
     "restify": "^4.1.1"
   }
 }
