--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "botbuilder": "^3.2.3",
     "https": "^1.0.0",
+    "request": "^2.75.0",
     "restify": "^4.1.1"
   }
 }
