--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "botbuilder": "^3.2.3",
     "https": "^1.0.0",
     "request": "^2.75.0",
-    "restify": "^4.1.1"
+    "restify": "^4.1.1",
+    "twilio": "^2.11.0",
+    "xml2js": "^0.4.17"
   }
 }
